fix: search results gap reduced (#58)

--- a/apps/hobbies-helsinki/src/common-events/components/eventList/eventList.module.scss
+++ b/apps/hobbies-helsinki/src/common-events/components/eventList/eventList.module.scss
@@ -7,7 +7,7 @@
     margin-bottom: 1.5rem;
 
     @include respond_above(s) {
-      grid-gap: var(--spacing-xl);
+      grid-gap: var(--spacing-s);
       margin-bottom: var(--spacing-xl);
     }
   }
